--- a/Musicaliti/MainWindow.xaml
+++ b/Musicaliti/MainWindow.xaml
@@ -134,5 +134,6 @@
         
         <TextBlock Name="start_time" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="1" VerticalAlignment="Bottom"/>
         <TextBlock Name="last_time" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="1" Grid.RowSpan="1" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+        <TextBlock Name="max_time" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="1" Grid.RowSpan="1" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
